SONNAR ISSUES